--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </a>
             </li>
              <li class="list-inline-item">
-              <a href="resume/Kapil Adhikari.pdf" target="_blank">
+              <a href="Kapil Adhikari.pdf" target="_blank">
                 <span class="btn btn-primary btn-md">
                   <i class="fa fa-file">  Resume</i>
                 </span>
