--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="subheading mb-5">Computer Science Engineer
             <a href="mailto:kapil.1308@outlook.com">kapil.1308@outlook.com</a>
           </div>
-          <p class="mb-5">I am currently studying Computer Science (Masters) at the University of Paderborn.</p>
+          <p class="mb-5">I am currently pursuing Information Engineering & Computer Science (Masters) at Hochschule Rhein-Waal.</p>
           <ul class="list-inline list-social-icons mb-0">
              <li class="list-inline-item">
               <a href="https://kapil1308.github.io/work/" target="_blank">
@@ -220,9 +220,9 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Paderborn University</h3>
+              <h3 class="mb-0">Hochschule Rhein-Waal</h3>
               <div class="subheading mb-3">Masters</div>
-              <div>Computer Science</div>
+              <div>Information Engineering & Computer Science</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2019 - Present </span>
